Name:          harvest-pe
Version:       0.1
License:       MIT
License-file:  LICENSE
Category:      Data
Author:        Logan Leland
Maintainer:    Logan Leland <ethicalmath@gmail.com>
Stability:     experimental
Cabal-Version: >= 1.8
Homepage:      http://github.com/loganleland/harvest-pe
Build-Type:    Simple
Synopsis:      Harvest the PE format

library
  build-depends:
    base >= 4.14 && < 5,
    binary,
    bytestring
  ghc-options : -Wall
  hs-source-dirs:  src
  exposed-modules:
    Data.HarvestPE
    Data.HarvestSection
    Data.HarvestNTHeader
    Data.HarvestDOSHeader

executable test
  main-is: Test.hs
  build-depends:
    base >= 4.14 && < 5,
    binary,
    bytestring,
    harvest-pe
  hs-source-dirs: test
